--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                     </div>
                 </div>
 
-                <h6 style="margin-top: 25px;"> Made With Love By Figmaland All Right Reserved </h6>
+                <h6 class="footer_h6"> Made With Love By Figmaland All Right Reserved </h6>
 
 
             </div>
